Assignment_2/upload/target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'<>'", "'='", 
                     "'<'", "'>'", "'<='", "'>='", "':='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "':'", "';'", "<INVALID>", "','", "'\"'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", "WITH", 
                      "BEGIN", "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", 
                      "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", "NOT", 
                      "AND", "OR", "DIV", "MOD", "ADDOP", "SUBOP", "MULOP", 
                      "DIVOP", "NOT_EQUAL", "EQUAL", "LESS", "GREATER", 
                      "LESS_OR_EQUAL", "GREATER_OR_EQUAL", "ASSIGN", "TRADITIONAL_BLOCK_COMMENT", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "LB", "RB", "LQ", 
                      "RQ", "COLON", "SEMI", "DOUBLE_DOT", "COMMA", "QUOTES", 
                      "INTLIT", "FLOATLIT", "IDENTIFIER", "BOOLLIT", "STRINGLIT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_varDecl = 2
    RULE_varTypeDeclList = 3
    RULE_varTypeDecl = 4
    RULE_idList = 5
    RULE_dataType = 6
    RULE_primType = 7
    RULE_arrayType = 8
    RULE_funcDecl = 9
    RULE_procDecl = 10
    RULE_compoundStmt = 11
    RULE_expr = 12
    RULE_expr1 = 13
    RULE_expr2 = 14
    RULE_stmtsList = 15
    RULE_stmts = 16
    RULE_bodyIter = 17
    RULE_assignStmt = 18
    RULE_assignOperand = 19
    RULE_ifStmt = 20
    RULE_matchIfStmt = 21
    RULE_unMatchIfStmt = 22
    RULE_whileStmt = 23
    RULE_forStmt = 24
    RULE_forCondition = 25
    RULE_breakStmt = 26
    RULE_continueStmt = 27
    RULE_returnStmt = 28
    RULE_withStmt = 29
    RULE_withVarDecl = 30
    RULE_callStmt = 31
    RULE_indexExpr = 32
    RULE_invoExpr = 33
    RULE_exprList = 34

    ruleNames =  [ "program", "decl", "varDecl", "varTypeDeclList", "varTypeDecl", 
                   "idList", "dataType", "primType", "arrayType", "funcDecl", 
                   "procDecl", "compoundStmt", "expr", "expr1", "expr2", 
                   "stmtsList", "stmts", "bodyIter", "assignStmt", "assignOperand", 
                   "ifStmt", "matchIfStmt", "unMatchIfStmt", "whileStmt", 
                   "forStmt", "forCondition", "breakStmt", "continueStmt", 
                   "returnStmt", "withStmt", "withVarDecl", "callStmt", 
                   "indexExpr", "invoExpr", "exprList" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    RETURN=10
    WHILE=11
    WITH=12
    BEGIN=13
    END=14
    FUNCTION=15
    PROCEDURE=16
    VAR=17
    ARRAY=18
    OF=19
    REAL=20
    BOOLEAN=21
    INTEGER=22
    STRING=23
    NOT=24
    AND=25
    OR=26
    DIV=27
    MOD=28
    ADDOP=29
    SUBOP=30
    MULOP=31
    DIVOP=32
    NOT_EQUAL=33
    EQUAL=34
    LESS=35
    GREATER=36
    LESS_OR_EQUAL=37
    GREATER_OR_EQUAL=38
    ASSIGN=39
    TRADITIONAL_BLOCK_COMMENT=40
    BLOCK_COMMENT=41
    LINE_COMMENT=42
    LB=43
    RB=44
    LQ=45
    RQ=46
    COLON=47
    SEMI=48
    DOUBLE_DOT=49
    COMMA=50
    QUOTES=51
    INTLIT=52
    FLOATLIT=53
    IDENTIFIER=54
    BOOLLIT=55
    STRINGLIT=56
    WS=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.decl()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 75
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MPParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MPParser.FuncDeclContext,0)


        def procDecl(self):
            return self.getTypedRuleContext(MPParser.ProcDeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.varDecl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.funcDecl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.procDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def varTypeDeclList(self):
            return self.getTypedRuleContext(MPParser.VarTypeDeclListContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = MPParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MPParser.VAR)
            self.state = 83
            self.varTypeDeclList()
            self.state = 84
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeDeclListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varTypeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarTypeDeclContext)
            else:
                return self.getTypedRuleContext(MPParser.VarTypeDeclContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_varTypeDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarTypeDeclList" ):
                return visitor.visitVarTypeDeclList(self)
            else:
                return visitor.visitChildren(self)




    def varTypeDeclList(self):

        localctx = MPParser.VarTypeDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varTypeDeclList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.varTypeDecl()
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 87
                    self.match(MPParser.SEMI)
                    self.state = 88
                    self.varTypeDecl() 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(MPParser.IdListContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def dataType(self):
            return self.getTypedRuleContext(MPParser.DataTypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_varTypeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarTypeDecl" ):
                return visitor.visitVarTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def varTypeDecl(self):

        localctx = MPParser.VarTypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varTypeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.idList()
            self.state = 95
            self.match(MPParser.COLON)
            self.state = 96
            self.dataType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_idList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = MPParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MPParser.IDENTIFIER)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 99
                self.match(MPParser.COMMA)
                self.state = 100
                self.match(MPParser.IDENTIFIER)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primType(self):
            return self.getTypedRuleContext(MPParser.PrimTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MPParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_dataType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataType" ):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = MPParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataType)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.primType()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimType" ):
                return visitor.visitPrimType(self)
            else:
                return visitor.visitChildren(self)




    def primType(self):

        localctx = MPParser.PrimTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LQ(self):
            return self.getToken(MPParser.LQ, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DOUBLE_DOT(self):
            return self.getToken(MPParser.DOUBLE_DOT, 0)

        def RQ(self):
            return self.getToken(MPParser.RQ, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primType(self):
            return self.getTypedRuleContext(MPParser.PrimTypeContext,0)


        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_arrayType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MPParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(MPParser.ARRAY)
            self.state = 113
            self.match(MPParser.LQ)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 114
                self.match(MPParser.SUBOP)


            self.state = 117
            self.match(MPParser.INTLIT)
            self.state = 118
            self.match(MPParser.DOUBLE_DOT)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 119
                self.match(MPParser.SUBOP)


            self.state = 122
            self.match(MPParser.INTLIT)
            self.state = 123
            self.match(MPParser.RQ)
            self.state = 124
            self.match(MPParser.OF)
            self.state = 125
            self.primType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def dataType(self):
            return self.getTypedRuleContext(MPParser.DataTypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundStmt(self):
            return self.getTypedRuleContext(MPParser.CompoundStmtContext,0)


        def varTypeDeclList(self):
            return self.getTypedRuleContext(MPParser.VarTypeDeclListContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(MPParser.VarDeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = MPParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MPParser.FUNCTION)
            self.state = 128
            self.match(MPParser.IDENTIFIER)
            self.state = 129
            self.match(MPParser.LB)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 130
                self.varTypeDeclList()


            self.state = 133
            self.match(MPParser.RB)
            self.state = 134
            self.match(MPParser.COLON)
            self.state = 135
            self.dataType()
            self.state = 136
            self.match(MPParser.SEMI)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 137
                self.varDecl()


            self.state = 140
            self.compoundStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundStmt(self):
            return self.getTypedRuleContext(MPParser.CompoundStmtContext,0)


        def varTypeDeclList(self):
            return self.getTypedRuleContext(MPParser.VarTypeDeclListContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(MPParser.VarDeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcDecl" ):
                return visitor.visitProcDecl(self)
            else:
                return visitor.visitChildren(self)




    def procDecl(self):

        localctx = MPParser.ProcDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_procDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MPParser.PROCEDURE)
            self.state = 143
            self.match(MPParser.IDENTIFIER)
            self.state = 144
            self.match(MPParser.LB)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 145
                self.varTypeDeclList()


            self.state = 148
            self.match(MPParser.RB)
            self.state = 149
            self.match(MPParser.SEMI)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 150
                self.varDecl()


            self.state = 153
            self.compoundStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def expr(self):
            return self.getTypedRuleContext(MPParser.ExprContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_compoundStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStmt" ):
                return visitor.visitCompoundStmt(self)
            else:
                return visitor.visitChildren(self)




    def compoundStmt(self):
